# tinympc-crazyflie-firmware

./: .gitignore  .gitmodules  Kconfig  Makefile  README.md  RUN.md  STM32F405.svd
.github/workflows/: CI.yml
examples/controller_lqi/src/: Kbuild  controller_lqi.c
examples/controller_lqr/src/: Kbuild  controller_lqr.c
examples/controller_lqr2/src/: .controller_lqr2.o.d  Kbuild  controller_lqr2 copy.c  controller_lqr2.c  controller_lqr2_cpy.c  traj_fig8.h
examples/controller_tinympc/: Kbuild  Makefile
examples/controller_tinympc/TinyMPC-ADMM/: CMakeLists.txt
examples/controller_tinympc/TinyMPC-ADMM/ext/slap/src/slap/: Kbuild  matmul.c  matmul.h  matmul_eigen.cpp  matrix.h
examples/controller_tinympc/TinyMPC-ADMM/src/tinympc/: CMakeLists.txt  constraint_linear.h  cost_lqr.c  lqr.c  types.h  utils.c  utils.cpp  utils.h
examples/controller_tinympc/src/: .controller_tinympc.o.d  .controller_tinympc.o.tmp  .controller_tinympc_swerve.o.d  Kbuild  controller_tinympc copy 2.c  controller_tinympc copy.c  controller_tinympc.c  controller_tinympc.cpp  controller_tinympc.cpp~HEAD  controller_tinympc3.c  controller_tinympc_2.c  controller_tinympc_bad_init.c  controller_tinympc_cmd.c  controller_tinympc_fig8x2.c  controller_tinympc_pos.c  controller_tinympc_sg8.c  controller_tinympc_sgl_pos.c  controller_tinympc_sw.c  controller_tinympc_swerve.c  params_1000hz.h  params_250hz.h  params_500hz.h  params_50hz.h  params_50hz_agg.h  traj_circle_500hz.h  traj_fig8.h  traj_fig8_12.h  traj_fig8_500hz.h  traj_fig8_single.h  traj_swerve.h
examples/controller_tinympc_eigen/: Kbuild  Makefile
examples/controller_tinympc_eigen/TinyMPC-ADMM/: Kbuild  README.md
examples/controller_tinympc_eigen/TinyMPC-ADMM/src_old/tinympc/: CMakeLists.txt  auxil.cpp  auxil.h  cost_lqr.cpp  lqr.cpp  lqr.h  tinympc.h  utils.h
examples/controller_tinympc_eigen/src/: .controller_tinympc.o.d  controller_tinympc copy.cpp  controller_tinympc.cpp  controller_tinympc1.cpp  controller_tinympc3.c  controller_tinympc_cmd.cpp  controller_tinympc_dt.cpp  controller_tinympc_good.cpp  controller_tinympc_sg8.cpp  params_100hz.h  params_500hz.h  params_50hz.h  params_dt.h  traj_circle_500hz.h  traj_fig8_12.h  traj_perching.h
examples/controller_tinympc_eigen_task/: Kbuild
examples/controller_tinympc_eigen_task/src/: .controller_tinympc.o.d  Kbuild  controller_tinympc.cpp  quadrotor_100hz_params.hpp  quadrotor_10hz_params.hpp  quadrotor_20hz_params.hpp  quadrotor_250hz_params.hpp  quadrotor_25hz_params.hpp  quadrotor_50hz_line_10s.hpp  quadrotor_50hz_line_10s_xyz.hpp  quadrotor_50hz_line_5s.hpp  quadrotor_50hz_line_8s.hpp  quadrotor_50hz_line_9s_xyz.hpp  quadrotor_50hz_params.hpp  quadrotor_50hz_params_2.hpp  quadrotor_50hz_params_3.hpp  quadrotor_50hz_params_constrained.hpp  quadrotor_50hz_params_constraints.hpp  quadrotor_50hz_params_unconstrained.hpp  quadrotor_50hz_ref_circle.hpp  quadrotor_50hz_ref_circle_2_5s.hpp
examples/controller_tinympc_eigen_v2/: Makefile
examples/controller_tinympc_eigen_v2/src/: controller_tinympc.cpp  quadrotor_500hz_params.hpp
examples/controller_tinympc_input_soc/: Kbuild  Makefile
examples/controller_tinympc_input_soc/src/: controller_tinympc.cpp  quadrotor_20hz_Q1e2.hpp  quadrotor_20hz_Q1e2_1e1.hpp  quadrotor_20hz_Q1e2_2e1.hpp  quadrotor_20hz_Q1e2_5e0.hpp  quadrotor_50hz_Q1e1.hpp  quadrotor_50hz_Q1e2_1e1.hpp
examples/controller_tinympc_safety/: app-config
examples/controller_tinympc_safety/TinyMPC2/examples/: CMakeLists.txt
examples/controller_tinympc_safety/src/: controller_tinympc.cpp  quadrotor_20hz_Q1e1.hpp  quadrotor_20hz_Q1e2_5e1.hpp  quadrotor_50hz_R1e1_1e0.hpp  quadrotor_50hz_R1e1_1e1.hpp  quadrotor_50hz_R1e2_1e2.hpp
examples/controller_tinympc_socp/: Makefile
examples/controller_tinympc_socp/src/: .controller_tinympc.o.d  controller_tinympc copy.cpp  controller_tinympc.cpp  quadrotor_20hz.hpp  quadrotor_20hz_Q5e2.hpp  quadrotor_20hz_params.hpp  quadrotor_50hz_Q1e2.hpp  rocket_landing_params_20hz.hpp
examples/controller_tinympc_state/src/: controller_tinympc.cpp  controller_tinympc_lqr.cpp  cpp_compat.h  params_100hz.h  params_100hz_old.h  traj_fig8_single.h
examples/controller_tinympc_state_soc/TinyMPC2/: CMakeLists.txt  README.md
examples/controller_tinympc_state_soc/TinyMPC2/src/tinympc/: CMakeLists.txt  admm.hpp  glob_opts.hpp
examples/controller_tinympc_state_soc/src/: controller_tinympc.cpp  landing_trajectory.hpp
examples/test_linear_algebra/: Kbuild  Makefile
examples/test_linear_algebra/src/: params_50hz_agg.h  (+1 more)
src/config/: config.h
src/init/: main.c
tools/usdlog/: check_mpc.py  check_stock.py  cmd_mpc  cmd_mpc15_log  cmd_mpc15_log4  cmd_mpc15_minimal  cmd_mpc20_log  cmd_pid  cmd_pid_log  log00  mpc15_minimal  pid  test_inToOut.py  tiny_plot_mpc_run.py
(+100 files in other folders)
